log
Mon 26 Sep 2022 12:11:45 AM UTC: 
 tests:  1|8
total_score: 0/70
244ff85
Mon 26 Sep 2022 12:15:25 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
treemap.c:41:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
50ed80a
Mon 26 Sep 2022 12:16:04 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
07fa66d
Mon 26 Sep 2022 12:17:32 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
treemap.c:41:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
8de1377
Mon 26 Sep 2022 12:19:03 AM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  4|7
total_score: 5/70
1062f3b
Mon 26 Sep 2022 12:26:02 AM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:36: error: ‘TreeNode’ has no member named ‘value’
   79 |     if(is_equal(tree, tree->current->value, key)==1)
      |                                    ^~
treemap.c:80:27: error: ‘TreeNode’ has no member named ‘key’
   80 |       return tree->current->key;
      |                           ^~
treemap.c:81:43: error: ‘TreeNode’ has no member named ‘key’
   81 |     else if(tree->lower_than(tree->current->key, key)==1)
      |                                           ^~
treemap.c:82:43: error: expected ‘;’ before ‘:’ token
   82 |       tree->current = tree->current->right:
      |                                           ^
      |                                           ;
Compilation failed
7021060
